error.utilidades.txt
Tarea_4/Utilidades.java:92: verify: The prover cannot establish an assertion (Assert) in method esSubconjunto
            //@ assert (\exists int i; 0 <= i && i < a.length; (\forall int j; 0 <= j && j < b.length; a[i] != b[j]));
                ^
Tarea_4/Utilidades.java:102: verify: The prover cannot establish an assertion (Postcondition: Tarea_4/Utilidades.java:88:) in method esSubconjunto
        return true;
        ^
Tarea_4/Utilidades.java:88: verify: Associated declaration: Tarea_4/Utilidades.java:102:
      @ ensures \result <==> (\forall int i; 0 <= i && i < a.length; (\exists int j; 0 <= j && j < b.length; a[i] == b[j]));
        ^
Tarea_4/Utilidades.java:130: warning: NOT IMPLEMENTED: Not yet supported feature in converting BasicPrograms to SMTLIB: JML Quantified expression using \num_of
      @             (\num_of int i; 0 <= i && i < a.length; a[i] == a[z]) ==
                     ^
Tarea_4/Utilidades.java:131: warning: NOT IMPLEMENTED: Not yet supported feature in converting BasicPrograms to SMTLIB: JML Quantified expression using \num_of
      @             (\num_of int i; 0 <= i && i < \old(a.length); \old(a[i]) == a[z]));
                     ^
Tarea_4/Utilidades.java:133: verify: The prover cannot establish an assertion (Postcondition: Tarea_4/Utilidades.java:126:) in method particionMenoresMayores
    public static void particionMenoresMayores(int[] a, int x){
                       ^
Tarea_4/Utilidades.java:126: verify: Associated declaration: Tarea_4/Utilidades.java:133:
      @ ensures (\exists int k; 0 <= k && k <= a.length; 
        ^
Tarea_4/Utilidades.java:115: verify: The prover cannot establish an assertion (LoopInvariant) in method rotarArreglo
          @ maintaining (\forall int j; i < j && j < a.length; a[j] == old[j - 1]);
            ^
Tarea_4/Utilidades.java:80: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                traspuesta[q][p] = matriz [p][q];
                           ^
  Reason: Double rewriting of ident: q q_3433_3433___14 q_3433_3462___29
1 error
2 warnings
6 verification failures
